syntax = "proto3";
package proto;
import "Response.proto";

option java_package = "com.iGap.proto";
option java_outer_classname = "ProtoError";

message ErrorResponse {
    Response response = 1;
    uint32 major_code = 2;
    uint32 minor_code = 3;

    uint32 wait = 4;
}