syntax = "proto3";
package proto;
import "Request.proto";
import "Response.proto";

option java_package = "com.iGap.proto";
option java_outer_classname = "ProtoInfoTime";

message InfoTime {
    Request request = 1;
}

message InfoTimeResponse {
    Response response = 1;
    uint32 timestamp = 2;
}
